# tickify-api

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml  justfile  openapi.json
src/: lib.rs  main.rs
src/config/: cors.rs  environment.rs  logger.rs  mod.rs
src/controllers/: auth.rs  export.rs  migrations.rs  mod.rs  status.rs  ticket.rs  user.rs
src/database/: connection.rs  mod.rs
src/database/migrations/: 0001_add_users_table.sql  0002_add_tickets_table.sql
src/database/repositories/: mod.rs  ticket_repository.rs  user_repository.rs
src/errors/: api_error.rs  auth_error.rs  config_error.rs  export_error.rs  mod.rs
src/export/csv/: mod.rs
src/export/pdf/: mod.rs
src/middlewares/: authentication.rs  authorization.rs
src/models/: auth.rs  jwt.rs  mod.rs  status.rs  ticket.rs  user.rs
src/models/auth/: access.rs  mod.rs  token.rs
src/openapi/: api_doc.rs
src/routes/: auth.rs  export.rs  migrations.rs  mod.rs  status.rs  swagger.rs  ticket.rs  user.rs
src/server/: mod.rs
src/utils/: hashing.rs  jwt.rs
src/validations/: existence.rs  mod.rs  uniqueness.rs
